# MainFinanceProject

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
alembic/: env.py
src/: main.py
src/application/ports/: user_repository_port.py
src/core/: config.py  database.py  dependencies.py  logging.py
src/domains/users/: models.py  schemas.py  service.py
src/infrastructure/repositories/: sqlalchemy_user_repository.py
src/routers/: api.py  users.py
